--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -7,30 +7,37 @@
     <title>Login</title>
 </head>
 <body>
-        <div class="caja_segundaria">
-            <div class="fondo"></div>
-            <form class="formulario">
-                <h1>BIENVENIDO A ERP</h1>
-                <input type="text" placeholder="Ingrese su usuario" id="usuario" required>
-                <input type="password" placeholder="Ingrese su contraseña" id="contrasena" required>
-                <button class="boton" type="submit">Ingresar</button>
-                <p>Recuperar usuario <a href="/correo">AQUI</a></p>
-                <p>Recuperar contraseña <a href="/recuperarClave">AQUI</a></p>
+    <div class="caja_segundaria">
+        <div class="fondo"></div>
+        <form class="formulario">
+            <h1>BIENVENIDO A ERP</h1>
+            <input type="text" placeholder="Ingrese su usuario" id="usuario" required>
+            <input type="password" placeholder="Ingrese su contraseña" id="contrasena" required>
+            
+            <!-- Barra de complejidad de la contraseña -->
+            <div class="progress mt-2">
+                <div id="password-strength-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <small id="password-strength-text" class="form-text"></small>
 
-                <div class="linea">
-                    <span class="line"></span>
-                    <p>O</p>
-                    <span class="line"></span>
-                </div>
-                <div class="metodos">
-                    <a href=""><img src="/img/google.png" ></a>
-                    <a href=""><img src="/img/microsoft.png" ></a>
-                    <a href=""><img src="/img/apple.png" ></a>
-                </div>
-            </form>
-        </div>
-        <input type="hidden" value="<%= url %>" id="url">
-    </body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+            <button class="boton" type="submit">Ingresar</button>
+            <p>Recuperar usuario <a href="/correo">AQUI</a></p>
+            <p>Recuperar contraseña <a href="/recuperarClave">AQUI</a></p>
+
+            <div class="linea">
+                <span class="line"></span>
+                <p>O</p>
+                <span class="line"></span>
+            </div>
+            <div class="metodos">
+                <a href=""><img src="/img/google.png"></a>
+                <a href=""><img src="/img/microsoft.png"></a>
+                <a href=""><img src="/img/apple.png"></a>
+            </div>
+        </form>
+    </div>
+    <input type="hidden" value="<%= url %>" id="url">
+</body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/js/login.js"></script>
 </html>
